--- a/BattleDraw.css
+++ b/BattleDraw.css
@@ -54,5 +54,10 @@ h2 {
 #gameWindow {
 	width: 100%;
 	height: 100%;
-	background-color: red;
+}
+
+#gameTitle {
+	font-family: Arial;
+	font-size: 50px;
+	text-align: center;
 }
