--- a/BattleDraw.css
+++ b/BattleDraw.css
@@ -9,6 +9,21 @@ body {
 	width: 1000px;
 	height: 150px;
 	color: white;
+	text-align: center;
+}
+
+#fullLogo {
+	position: relative;
+	z-index: -1;
+}
+
+#loginSpan {
+	font-family: sans-serif;
+	font-size: 17px;
+	color: white;
+	position: relative;
+	float: left;
+	text-decoration: underline;
 }
 
 #main {
@@ -146,4 +161,10 @@ h2 {
 
 .cardTitle {
 	font-weight: bold;
+}
+
+.cardBack {
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
 }
