--- a/BattleDraw.css
+++ b/BattleDraw.css
@@ -29,7 +29,7 @@ body {
 #main {
 	margin: auto;
 	width: 1000px;
-	height: 750px;
+	height: 800px;
 	background-color: #555;
 	border-radius: 3px;
 }
@@ -184,4 +184,54 @@ h2 {
 	top: 50%;
 	transform: translateY(-50%);
 	cursor: pointer;
+}
+
+#chat {
+	margin: auto;
+	height: 200px;
+	width: 345px;
+	border: 1px solid black;
+	background-color: white;
+}
+
+#msgList {
+	width: 98%;
+	height: 166px;
+	border-bottom: 1px solid black;
+	padding: 3px 3px 3px 3px;
+	overflow-y: hidden;
+	overflow-x: hidden;
+}
+
+#chatForm {
+	display: block;
+	width: 100%;
+	height: 25px;
+	padding: 0px;
+}
+
+#msgText {
+	width: 285px;
+	height: 25px;
+	border: none;
+	margin: 0px;
+	font-family: Arial;
+	font-size: 16px;
+	padding-left: 5px;
+}
+
+#chatSubmit {
+	width: 50px;
+	height: 25px;
+	border: none;
+	margin: 0px;
+	cursor: pointer;
+}
+
+.chatMsg {
+	width: 340px;
+	word-wrap: break-word;
+	border-top: 1px solid #999;
+	margin-top: 2.5px;
+	padding-top: 2.5px;
 }
